--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,9 @@ ignore =
 	E241
 exclude =
 	.git/
+	aiostem/event/__pycache/
+	aiostem/question/__pycache/
+	aiostem/response/__pycache/
 	aiostem/__pycache/
 	build/
 	debian/
