--- a/setup.cfg
+++ b/setup.cfg
@@ -1,16 +1,42 @@
+[metadata]
+name = aiostem
+version = 0.1.2
+author = Romain Bezut
+author_email = morian@xdec.net
+license = MIT
+license_file = LICENSE
+description = Asynchronous Tor controller library for asyncio and Python
+long_description = file: README.md
+long_description_content_type = text/markdown
+platforms = any
+classifiers =
+	OSI Approved :: MIT License
+	Operating System :: POSIX :: Linux
+	Programming Language :: Python
+	Programming Language :: Python :: 3
+	Programming Language :: Python :: 3.7
+	Programming Language :: Python :: 3.8
+	Programming Language :: Python :: 3.9
+
+[options]
+install_requires =
+	aiofiles
+	setuptools
+	stem >= 1.8.0
+scripts =
+	bin/aiostem-hsscan
+packages = find:
+
 [flake8]
 ignore =
-	E221
-	E241
+	E221  # Multiple spaces before operator
+	E241  # Multiple spaces after ':'
 exclude =
-	.git/
-	aiostem/event/__pycache/
-	aiostem/question/__pycache/
-	aiostem/response/__pycache/
-	aiostem/__pycache/
 	build/
 	debian/
 	dist/
-	setup.py
+	aiostem.egg-info/
 	venv/
 max-line-length = 100
+max-complexity = 10
+statistics = True
