--- a/debian/rules
+++ b/debian/rules
@@ -1,12 +1,8 @@
 #!/usr/bin/make -f
 # -*- makefile -*-
 
-#DH_VERBOSE ?= 1
-
-export PYBUILD_NAME=python3-aiostem
+export PYBUILD_NAME=geoscan
+export PYBUILD_DISABLE=test
 
 %:
 	dh $@ --with python3 --buildsystem=pybuild
-
-override_dh_auto_test:
-
