--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = aiostem
-version = 0.1.2
+version = 0.1.3
 author = Romain Bezut
 author_email = morian@xdec.net
 license = MIT
@@ -17,6 +17,7 @@ classifiers =
 	Programming Language :: Python :: 3.7
 	Programming Language :: Python :: 3.8
 	Programming Language :: Python :: 3.9
+	Programming Language :: Python :: 3.10
 
 [options]
 install_requires =
@@ -25,7 +26,10 @@ install_requires =
 	stem >= 1.8.0
 scripts =
 	bin/aiostem-hsscan
-packages = find:
+
+[options.package_data]
+aiostem =
+	py.typed
 
 [flake8]
 ignore =
@@ -35,8 +39,36 @@ exclude =
 	build/
 	debian/
 	dist/
-	aiostem.egg-info/
+	*.egg-info/
 	venv/
 max-line-length = 100
 max-complexity = 10
+inline-quotes = single
+multiline-quotes = double
+show-source = True
 statistics = True
+
+[isort]
+line_length = 100
+known_first_party = aiostem
+multi_line_output = 3
+include_trailing_comma = True
+force_grid_wrap = 3
+
+[mypy]
+namespace_packages = True
+explicit_package_bases = True
+show_error_codes = True
+follow_imports = silent
+strict_optional = True
+warn_redundant_casts = True
+warn_unused_ignores = False
+disallow_any_generics = True
+check_untyped_defs = True
+no_implicit_reexport = False
+warn_unused_configs = True
+disallow_subclassing_any = True
+disallow_incomplete_defs = True
+disallow_untyped_decorators = True
+disallow_untyped_calls = True
+disallow_untyped_defs = True
