linter: more aggressive changes and checks.
Signed-off-by: Romain Bezut <morian@xdec.net>

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,23 +32,29 @@ aiostem =
 	py.typed
 
 [flake8]
-ignore =
-	E241  # Multiple spaces after ':'
 exclude =
 	build/
 	debian/
 	dist/
 	*.egg-info/
 	venv/
-max-line-length = 100
+extend-ignore = E203  # Whitespace before ':'
+max-line-length = 95
 max-complexity = 10
 inline-quotes = single
 multiline-quotes = double
 show-source = True
 statistics = True
 
+[pydocstyle]
+ignore =
+	D100,  # Missing docstring in public module
+	D104,  # Missing docstring in public package
+	D203,  # 1 blank line required before class docstring
+	D213,  # Multi-line docstring summary should start at the second line
+
 [isort]
-line_length = 100
+line_length = 95
 known_first_party = aiostem
 multi_line_output = 3
 include_trailing_comma = True
