--- a/tests/requirements-linter.txt
+++ b/tests/requirements-linter.txt
@@ -2,8 +2,9 @@ black==21.12b0
 flake8-quotes==3.3.1
 flake8==4.0.1
 isort==5.10.1
-mypy==0.930
+mypy==0.931
 pycodestyle==2.8.0
+pydocstyle==6.1.1
 pyflakes==2.4.0
 types-pkg-resources==0.1.3
-types-setuptools==57.4.4
+types-setuptools==57.4.7
