--- a/tests/requirements-linter.txt
+++ b/tests/requirements-linter.txt
@@ -6,5 +6,6 @@ mypy==0.931
 pycodestyle==2.8.0
 pydocstyle==6.1.1
 pyflakes==2.4.0
+types-aiofiles==0.8.3
 types-pkg-resources==0.1.3
 types-setuptools==57.4.7
