--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,6 +61,35 @@ python3-linter:
     - make lint
   allow_failure: true
 
+python3-tests:
+  image: ${CI_REGISTRY}/dockers/ci/python-build:3.10-alpine
+  stage: tests
+  needs: []
+  services:
+    - name: "${CI_REGISTRY}/${CI_PROJECT_ROOT_NAMESPACE}/docker/tor-client:0.4.6.7"
+      alias: torcontrol
+      command: [
+        'tor', '-f', '/etc/tor/torrc',
+        'HashedControlPassword', '16:163184F7911BFBE760F8E71F6B13522B768BE174591BA285B3373FBC07'
+      ]
+  cache:
+    <<: *pip_cache
+  before_script:
+    - python -m venv venv
+    - source venv/bin/activate
+    - make install-testing
+  script:
+    - |-
+      coverage run bin/aiostem-hsscan --input tests/onionlist.txt
+      --control torcontrol:9201 --password aiostem --workers 2 --timeout 30
+    - make test
+    - coverage report
+    - coverage xml
+  coverage: '/TOTAL.+ ([0-9]{1,3}[.][0-9]{2}%)/'
+  artifacts:
+    reports:
+      cobertura: coverage.xml
+
 python3-mypy:
   image: ${CI_REGISTRY}/dockers/ci/python-build:3.10-alpine
   stage: tests
