--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,10 +79,10 @@ python3-tests:
     - source venv/bin/activate
     - make install-testing
   script:
-    - make test
     - >-
       coverage run --append bin/aiostem-hsscan --input tests/onionlist.txt
       --control torcontrol:9051 --password aiostem --workers 2 --timeout 30
+    - pytest --cov=aiostem --cov-append --cov-report=
     - coverage report
     - coverage xml
   coverage: '/TOTAL.+ ([0-9]{1,3}[.][0-9]{2}%)/'
