Provide some additional tests before we release version 1.0.
Signed-off-by: Romain Bezut <morian@xdec.net>

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,20 @@ multiline-quotes = double
 show-source = True
 statistics = True
 
+[coverage:run]
+branch = True
+
+[coverage:report]
+precision = 2
+exclude_lines =
+	raise NotImplementedError
+	if TYPE_CHECKING:
+
+[coverage:paths]
+source =
+	aiostem/
+	bin/
+
 [pydocstyle]
 ignore =
 	D100,  # Missing docstring in public module
