Fixed versions so that we can release v1.0
Signed-off-by: Romain Bezut <morian@xdec.net>

--- a/debian/rules
+++ b/debian/rules
@@ -1,7 +1,7 @@
 #!/usr/bin/make -f
 # -*- makefile -*-
 
-export PYBUILD_NAME=geoscan
+export PYBUILD_NAME=aiostem
 export PYBUILD_DISABLE=test
 
 %:
