Fix wheel packaging and release version 0.2.1.
Signed-off-by: Romain Bezut <morian@xdec.net>

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = aiostem
-version = 0.2.0
+version = 0.2.1
 author = Romain Bezut
 author_email = morian@xdec.net
 license = MIT
@@ -24,8 +24,12 @@ install_requires =
 	aiofiles
 	setuptools
 	stem >= 1.8.0
+packages = find:
 scripts =
 	bin/aiostem-hsscan
+
+[options.packages.find]
+exclude = test
 
 [options.package_data]
 aiostem =
