--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,6 +65,9 @@ python3-tests:
   image: ${CI_REGISTRY}/dockers/ci/python-build:3.10-alpine
   stage: tests
   needs: []
+  variables:
+    AIOSTEM_HOST: 'torcontrol'
+    AIOSTEM_PASS: 'aiostem'
   services:
     - name: "${CI_REGISTRY}/${CI_PROJECT_ROOT_NAMESPACE}/docker/tor-client:0.4.5.9"
       alias: torcontrol
