compat: make sure to be compatible with python 3.7 and greater as claimed.
Signed-off-by: Romain Bezut <morian@xdec.net>

--- a/setup.cfg
+++ b/setup.cfg
@@ -82,6 +82,7 @@ include_trailing_comma = True
 force_grid_wrap = 0
 
 [mypy]
+python_version = 3.7
 namespace_packages = True
 explicit_package_bases = True
 show_error_codes = True
