--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,7 +91,9 @@ python3-tests:
   coverage: '/TOTAL.+ ([0-9]{1,3}[.][0-9]{2}%)/'
   artifacts:
     reports:
-      cobertura: coverage.xml
+      coverage_report:
+        coverage_format: cobertura
+        path: coverage.xml
 
 python3-mypy:
   image: ${CI_REGISTRY}/dockers/ci/python-build:3.10-alpine
