linter: update tool versions and fix some cosmetic issues.
Signed-off-by: Romain Bezut <morian@xdec.net>

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,9 +46,9 @@ exclude =
 	dist/
 	*.egg-info/
 	venv/
-extend-ignore = E203  # Whitespace before ':'
+extend-ignore = E203
 max-line-length = 95
-max-complexity = 15
+max-complexity = 12
 inline-quotes = single
 multiline-quotes = double
 show-source = True
