package: fix bad license classifier.
Signed-off-by: Romain Bezut <morian@xdec.net>

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 platforms = any
 classifiers =
-	OSI Approved :: MIT License
+	License :: OSI Approved :: MIT License
 	Operating System :: POSIX :: Linux
 	Programming Language :: Python
 	Programming Language :: Python :: 3
