--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,115 @@
 [build-system]
 requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
+
+[tool.pytest.ini_options]
+testpaths = 'tests'
+asyncio_mode = 'auto'
+
+[tool.flake8]
+exclude = [
+	'*.egg-info/',
+	'build/',
+	'debian/',
+	'dist/',
+	'htmlcov/',
+	'venv/',
+]
+extend-ignore = 'E203'
+max-line-length = 95
+max-complexity = 12
+inline-quotes = 'single'
+multiline-quotes = 'double'
+show-source = true
+statistics = true
+
+[tool.ruff]
+select = [
+	'A',     # flake8-builtins
+	'ASYNC', # flake8-async
+	'B',     # flake8-bugbear
+	'COM',   # flake8-comprehensions
+	'D',     # pydocstyle
+	'DTZ',   # flake8-datetimez
+	'E',     # pycodestyle errors
+	'F',     # Pyflakes
+	'N',     # pep8-naming
+	'PIE',   # flake8-pie
+	'PT',    # flake8-pytest-style
+	'Q',     # flake8-quotes
+	'RET',   # flake8-return
+	'RSE',   # flake8-raise
+	'RUF',   # Ruff-specific rules
+	'SIM',   # flake8-simplify
+	'SLF',   # flake8-self
+	'UP',    # pyupgrade
+	'W',     # pycodestyle warnings
+]
+ignore = [
+	'A003',  # Class attribute is shadowing a python builtin
+	'D100',  # Missing docstring in public module
+	'D104',  # Missing docstring in public package
+	'D203',  # 1 blank line required before class docstring
+	'D213',  # Multi-line docstring summary should start at the second line
+	'D401',  # First line of docstring should be in imperative mood
+]
+line-length = 95
+target-version = 'py39'
+
+[tool.ruff.flake8-quotes]
+docstring-quotes = 'double'
+inline-quotes = 'single'
+multiline-quotes = 'double'
+
+[tool.ruff.per-file-ignores]
+'tests/*.py' = [
+	'D',      # pydocstyle
+	'RUF012', # mutable-class-default
+]
+
+[tool.coverage.run]
+source = ['aiostem']
+branch = true
+
+[tool.coverage.report]
+precision = 2
+exclude_lines = [
+	'pragma: no cover',
+	'raise NotImplementedError',
+	'raise NotImplemented',
+	'if TYPE_CHECKING:',
+	'@overload',
+]
+
+[tool.black]
+color = true
+line-length = 95
+target-version = ['py39']
+skip-string-normalization = true
+
+[tool.isort]
+line_length = 95
+known_first_party = 'aiostem'
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+combine_as_imports = true
+
+[tool.mypy]
+python_version = '3.9'
+namespace_packages = true
+explicit_package_bases = true
+show_error_codes = true
+follow_imports = 'silent'
+strict_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = false
+disallow_any_generics = true
+check_untyped_defs = true
+no_implicit_reexport = true
+warn_unused_configs = true
+disallow_subclassing_any = true
+disallow_incomplete_defs = true
+disallow_untyped_decorators = true
+disallow_untyped_calls = true
+disallow_untyped_defs = true
