--- a/tests/requirements-linter.txt
+++ b/tests/requirements-linter.txt
@@ -1,9 +1,7 @@
 black==23.9.1
-flake8==6.1.0
-flake8-quotes==3.3.2
 isort==5.12.0
 mypy==1.5.1
-pydocstyle==6.3.0
+ruff==0.0.292
 types-aiofiles==23.2.0.0
 types-pkg-resources==0.1.3
 types-setuptools==68.2.0.0
