--- a/debian/control
+++ b/debian/control
@@ -4,8 +4,10 @@ Priority: optional
 Maintainer: Romain Bezut <morian@xdec.net>
 Build-Depends: debhelper,
                dh-python,
+               pybuild-plugin-pyproject,
                python3-all,
-               python3-setuptools
+               python3-setuptools,
+               python3-wheel
 
 Package: python3-aiostem
 Architecture: all
