debian: enforce pyproject as the PYBUILD system.
Signed-off-by: Romain Bezut <morian@xdec.net>

--- a/debian/rules
+++ b/debian/rules
@@ -3,6 +3,7 @@
 
 export PYBUILD_NAME=aiostem
 export PYBUILD_DISABLE=test
+export PYBUILD_SYSTEM=pyproject
 
 %:
 	dh $@ --with python3 --buildsystem=pybuild
