--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,8 @@ variables:
 python3-package:
   image: ${CI_REGISTRY}/dockers/ci/python-build:3.12-alpine
   stage: build
+  cache:
+    <<: *pip_cache
   script:
     - python3 -m build --sdist --wheel
   artifacts:
@@ -67,6 +69,21 @@ python3-linting:
     - make lint
   allow_failure: true
 
+python3-mypy:
+  image: ${CI_REGISTRY}/dockers/ci/python-build:3.12-alpine
+  stage: tests
+  cache:
+    <<: *pip_cache
+  needs: []
+  before_script:
+    - python -m venv venv
+    - source venv/bin/activate
+    - make install-aiostem
+    - make install-linting
+  script:
+    - make mypy
+  allow_failure: true
+
 python3-tests:
   image: ${CI_REGISTRY}/dockers/ci/python-build:3.12-alpine
   stage: tests
@@ -92,11 +109,7 @@ python3-tests:
     - source venv/bin/activate
     - make install-testing
   script:
-    - >-
-      coverage run --append bin/aiostem-hsscan --input tests/onionlist.txt
-      --control torcontrol:9051 --password aiostem --workers 2 --timeout 60
-    - pytest --cov=aiostem --cov-append --cov-report=
-    - coverage report
+    - make test
     - coverage xml
   coverage: '/TOTAL.+ ([0-9]{1,3}[.][0-9]{2}%)/'
   artifacts:
@@ -104,21 +117,6 @@ python3-tests:
       coverage_report:
         coverage_format: cobertura
         path: coverage.xml
-
-python3-mypy:
-  image: ${CI_REGISTRY}/dockers/ci/python-build:3.12-alpine
-  stage: tests
-  cache:
-    <<: *pip_cache
-  needs: []
-  before_script:
-    - python -m venv venv
-    - source venv/bin/activate
-    - make install-aiostem
-    - make install-linting
-  script:
-    - make mypy
-  allow_failure: true
 
 python3-publish:
   image: ${CI_REGISTRY}/dockers/ci/python-build:3.12-alpine
