--- a/pyproject.toml
+++ b/pyproject.toml
@@ -128,7 +128,7 @@ show_error_codes = true
 follow_imports = 'silent'
 strict_optional = true
 warn_redundant_casts = true
-warn_unused_ignores = false
+warn_unused_ignores = true
 disallow_any_generics = true
 check_untyped_defs = true
 no_implicit_reexport = true
