--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ classifiers = [
 	'Programming Language :: Python :: 3.12',
 ]
 dependencies = [
-	'aiofiles',
+	'aiofiles >= 23.0, < 24.0',
 	'stem >= 1.8.2, < 1.9',
 ]
 
