--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,12 +70,10 @@ select = [
 	'W',     # pycodestyle warnings
 ]
 ignore = [
-	'A003',  # Class attribute is shadowing a python builtin
 	'D100',  # Missing docstring in public module
 	'D104',  # Missing docstring in public package
 	'D203',  # 1 blank line required before class docstring
 	'D213',  # Multi-line docstring summary should start at the second line
-	'D401',  # First line of docstring should be in imperative mood
 ]
 line-length = 95
 target-version = 'py39'
@@ -85,10 +83,12 @@ docstring-quotes = 'double'
 inline-quotes = 'single'
 multiline-quotes = 'double'
 
+[tool.ruff.mccabe]
+max-complexity = 12
+
 [tool.ruff.per-file-ignores]
 'tests/*.py' = [
-	'D',      # pydocstyle
-	'RUF012', # mutable-class-default
+	'D',     # pydocstyle
 ]
 
 [tool.coverage.run]
