--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,6 +37,7 @@ python3-package:
   script:
     - python3 -m build --sdist --wheel
   artifacts:
+    name: "aiostem-${CI_COMMIT_REF_NAME}"
     expire_in: 7 days
     paths:
       - dist/
@@ -51,7 +52,7 @@ ubuntu2204-package:
   before_script:
     - pip install -U setuptools
 
-python3-linting:
+python3-linter:
   image: ${CI_REGISTRY}/dockers/ci/python-build:3.12-alpine
   stage: tests
   cache:
@@ -62,7 +63,13 @@ python3-linting:
     - source venv/bin/activate
     - make install-linting
   script:
-    - make lint
+    - ruff check --exit-zero --output-format=gitlab -o gl-code-quality-report.json
+    - ruff format --check --diff
+    - ruff check
+  artifacts:
+    expire_in: 7 days
+    reports:
+      codequality: gl-code-quality-report.json
   allow_failure: true
 
 python3-mypy:
@@ -77,7 +84,10 @@ python3-mypy:
     - make install-aiostem
     - make install-linting
   script:
-    - make mypy
+    - mypy --junit-xml mypy.xml
+  artifacts:
+    reports:
+      junit: mypy.xml
   allow_failure: true
 
 python3-tests:
@@ -104,7 +114,7 @@ python3-tests:
     - source venv/bin/activate
     - make install-testing
   script:
-    - make test
+    - pytest --cov=aiostem --junit-xml=pytest.xml
     - coverage xml
   coverage: '/TOTAL.+ ([0-9]{1,3}[.][0-9]{2}%)/'
   artifacts:
@@ -112,6 +122,7 @@ python3-tests:
       coverage_report:
         coverage_format: cobertura
         path: coverage.xml
+      junit: pytest.xml
 
 python3-publish:
   image: ${CI_REGISTRY}/dockers/ci/python-build:3.12-alpine
