--- a/tests/requirements-testing.txt
+++ b/tests/requirements-testing.txt
@@ -1,5 +1,5 @@
 coverage==7.4.1
-pytest==8.0.2
-pytest-asyncio==0.23.5
+pytest==8.1.1
+pytest-asyncio==0.23.5.post1
 pytest-cov==4.1.0
-pytest-timeout==2.2.0
+pytest-timeout==2.3.1
