--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ classifiers = [
 	'Programming Language :: Python :: 3 :: Only',
 	'Programming Language :: Python :: 3.11',
 	'Programming Language :: Python :: 3.12',
+	'Programming Language :: Python :: 3.13',
 ]
 dependencies = [
 	'aiofiles >= 23.0, < 24.0',
