--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ variables:
   PIP_CACHE_DIR: "${CI_PROJECT_DIR}/.pip_cache"
 
 .pip-cache: &pip_cache
-  key: ${CI_COMMIT_REF_SLUG}
+  key: ${CI_COMMIT_REF_SLUG}-${CI_JOB_NAME_SLUG}
   paths:
     - .pip_cache/
   policy: pull-push
@@ -29,7 +29,7 @@ variables:
       - dist/python3-aiostem_*.deb
 
 
-python3-package:
+build-package:
   image: ${CI_REGISTRY}/dockers/ci/python-build:3.13-alpine
   stage: build
   cache:
@@ -42,15 +42,15 @@ python3-package:
     paths:
       - dist/
 
-debian12-package:
+build-debian12:
   image: ${CI_REGISTRY}/dockers/ci/debian-build:12
   extends: .deb-common
 
-ubuntu2404-package:
+build-ubuntu2404:
   image: ${CI_REGISTRY}/dockers/ci/ubuntu-build:24.04
   extends: .deb-common
 
-python3-linter:
+linting:
   image: ${CI_REGISTRY}/dockers/ci/python-build:3.13-alpine
   stage: tests
   cache:
@@ -70,7 +70,7 @@ python3-linter:
       codequality: gl-code-quality-report.json
   allow_failure: true
 
-python3-mypy:
+typing:
   image: ${CI_REGISTRY}/dockers/ci/python-build:3.13-alpine
   stage: tests
   cache:
@@ -88,7 +88,7 @@ python3-mypy:
       junit: mypy.xml
   allow_failure: true
 
-python3-tests:
+tests:
   image: ${CI_REGISTRY}/dockers/ci/python-build:3.13-alpine
   stage: tests
   needs: []
@@ -122,7 +122,7 @@ python3-tests:
         path: coverage.xml
       junit: pytest.xml
 
-python3-publish:
+publish-package:
   image: ${CI_REGISTRY}/dockers/ci/python-build:3.13-alpine
   stage: publish
   variables:
@@ -132,6 +132,6 @@ python3-publish:
   only:
     - tags
   needs:
-    - python3-package
+    - build-package
   script:
     - twine upload dist/aiostem-*.whl
