--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,6 @@ requires-python = '>=3.11'
 include = [
 	'aiostem',
 	'aiostem.event',
-	'aiostem.extra',
 	'aiostem.query',
 	'aiostem.reply',
 ]
@@ -69,7 +68,7 @@ asyncio_mode = 'strict'
 testpaths = ['tests']
 
 [tool.ruff]
-include = ['aiostem/**/*.py', 'bin/aiostem-hsscan', 'tests/**/*.py']
+include = ['aiostem/**/*.py', 'tests/**/*.py']
 indent-width = 4
 line-length = 95
 output-format = 'grouped'
@@ -149,7 +148,7 @@ max-complexity = 12
 ]
 
 [tool.mypy]
-files = ['aiostem/**/*.py', 'bin/aiostem-hsscan']
+files = ['aiostem/**/*.py']
 python_version = '3.11'
 namespace_packages = true
 explicit_package_bases = true
