--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ classifiers = [
 ]
 dependencies = [
 	'aiofiles >= 23.0, < 25.0',
+	'pydantic >= 2.9, < 3.0',
 	'stem >= 1.8.2, < 1.9',
 ]
 requires-python = '>=3.11'
@@ -32,6 +33,7 @@ requires-python = '>=3.11'
 include = [
 	'aiostem',
 	'aiostem.event',
+	'aiostem.protocol',
 	'aiostem.query',
 	'aiostem.reply',
 ]
@@ -134,6 +136,9 @@ required-imports = ['from __future__ import annotations']
 docstring-quotes = 'double'
 inline-quotes = 'single'
 multiline-quotes = 'double'
+
+[tool.ruff.lint.flake8-type-checking]
+runtime-evaluated-decorators = ['dataclasses.dataclass']
 
 [tool.ruff.lint.mccabe]
 max-complexity = 12
