protocol: use a cache for TypeAdapter in replies.
Signed-off-by: Romain Bezut <morian@xdec.net>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -141,10 +141,8 @@ inline-quotes = 'single'
 multiline-quotes = 'double'
 
 [tool.ruff.lint.flake8-type-checking]
-runtime-evaluated-decorators = [
-	'dataclasses.dataclass',
-	'pydantic.BaseModel',
-]
+runtime-evaluated-base-classes = ['pydantic.BaseModel']
+runtime-evaluated-decorators = ['dataclasses.dataclass']
 
 [tool.ruff.lint.mccabe]
 max-complexity = 12
