linting: minor fixes.
Signed-off-by: Romain Bezut <morian@xdec.net>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -109,7 +109,7 @@ select = [
 	'SIM',    # flake8-simplify
 	'SLF',    # flake8-self
 	'T20',    # flake8-print
-	'TCH',    # flake8-type-checking
+	'TC',     # flake8-type-checking
 	'TRY',    # tryceratops
 	'UP',     # pyupgrade
 	'W',      # pycodestyle warnings
