--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ requires-python = '>=3.11'
 [tool.setuptools.packages.find]
 include = [
 	'aiostem',
-	'aiostem.protocol',
+	'aiostem.utils',
 ]
 
 [tool.setuptools.dynamic]
