--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,7 +3,7 @@ name: Test
 on:
   pull_request:
     paths:
-      - '.github/workflows/test.yml'
+      - '.github/workflows/tests.yml'
       - 'tests/requirements-*.txt'
       - 'pyproject.toml'
       - '**.py'
@@ -14,7 +14,7 @@ on:
     branches:
       - 'master'
     paths:
-      - '.github/workflows/test.yml'
+      - '.github/workflows/tests.yml'
       - 'tests/requirements-*.txt'
       - 'pyproject.toml'
       - '**.py'
@@ -29,14 +29,6 @@ jobs:
       AIOSTEM_HOST: localhost
       AIOSTEM_PASS: aiostem
 
-    services:
-      tor-client:
-        image: 'docker.io/morian42/tor-client:0.4.8.13'
-        ports:
-          - '9051:9051'
-        volumes:
-          - './tests/control-hash.conf:/etc/tor/torrc.d/00-control-hash.conf'
-
     strategy:
       fail-fast: false
       matrix:
@@ -45,6 +37,9 @@ jobs:
     steps:
       - name: Repository checkout
         uses: actions/checkout@v4
+
+      - name: Run the Tor service
+        run: docker-compose -f tests/compose.yml up --detach --wait
 
       - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
