--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,6 +33,12 @@ build-docs:
   stage: build
   cache:
     <<: *pip_cache
+  variables:
+    # Ensure that sphinx has the correct identifier (see docs/conf.py).
+    READTHEDOCS_GIT_IDENTIFIER: ${CI_COMMIT_REF_NAME}
+    READTHEDOCS_GIT_COMMIT_HASH: ${CI_COMMIT_SHA}
+    READTHEDOCS_VERSION_TYPE: 'tag'
+    READTHEDOCS_VERSION_NAME: ${CI_COMMIT_TAG}
   needs: []
   before_script:
     - python -m venv venv
