--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -4,3 +4,4 @@ sphinx_autodoc_typehints==2.5.0
 sphinx_copybutton==0.5.2
 sphinx_inline_tabs==2023.4.21
 sphinx-toolbox==3.8.1
+sphinxext_opengraph==0.9.1
