--- a/pyproject.toml
+++ b/pyproject.toml
@@ -144,6 +144,9 @@ runtime-evaluated-decorators = ['dataclasses.dataclass']
 max-complexity = 12
 
 [tool.ruff.lint.per-file-ignores]
+'aiostem/types.py' = [
+	'A005',   # Module shadows a Python standard-library module
+]
 'tests/*.py' = [
 	'D',      # pydocstyle
 	'S101',   # bandit: Use of `assert` detected
