--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,5 +2,7 @@ include LICENSE
 include CHANGELOG.rst
 include README.rst
 
+recursive-include tests *
+
 global-exclude __pycache__
 global-exclude *.py[cod]
