--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ classifiers = [
 	'Programming Language :: Python',
 	'Programming Language :: Python :: 3',
 	'Programming Language :: Python :: 3 :: Only',
+	'Programming Language :: Python :: 3.10',
 	'Programming Language :: Python :: 3.11',
 	'Programming Language :: Python :: 3.12',
 	'Programming Language :: Python :: 3.13',
@@ -28,9 +29,13 @@ classifiers = [
 ]
 dependencies = [
 	'cryptography >= 44.0, < 46.0',
-	'pydantic >= 2.9, < 3.0',
+	'pydantic >= 3.0',
+	'aiofiles >= 24.1.0',
+	'aiosignal >= 0.1.4',
+	'frozenlist >= 1.7.0',
+	'async_lru >= 2.0.5'
 ]
-requires-python = '>=3.11'
+requires-python = '>=3.10'
 
 [project.urls]
 Changelog = 'https://github.com/morian/aiostem/blob/master/CHANGELOG.rst'
