--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -90,14 +90,17 @@ typing:
   allow_failure: true
 
 tests:
-  image: ${CI_REGISTRY}/dockers/ci/python-build:3.13-alpine
+  parallel:
+    matrix:
+      - PYTHON_VERSION: ['3.10', '3.11', '3.12', '3.13']
+  image: ${CI_REGISTRY}/dockers/ci/python-build:${PYTHON_VERSION}-alpine
   stage: tests
   needs: []
   variables:
     AIOSTEM_HOST: 'torcontrol'
     AIOSTEM_PASS: 'aiostem'
   services:
-    - name: "${CI_REGISTRY}/${CI_PROJECT_ROOT_NAMESPACE}/docker/tor-client:0.4.8.16"
+    - name: "${CI_REGISTRY}/${CI_PROJECT_ROOT_NAMESPACE}/docker/tor-client:0.4.8.17"
       alias: torcontrol
       command: [
         'tor',
