--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,11 +24,12 @@ classifiers = [
 	'Programming Language :: Python :: 3.11',
 	'Programming Language :: Python :: 3.12',
 	'Programming Language :: Python :: 3.13',
+	'Programming Language :: Python :: 3.14',
 	'Topic :: Software Development :: Libraries :: Python Modules',
 	'Typing :: Typed',
 ]
 dependencies = [
-	'cryptography >= 44.0, < 46.0',
+	'cryptography >= 44.0, < 47.0',
 	'pydantic >= 2.9, < 3.0',
 	'typing_extensions > 4.0; python_version < "3.11"',
 ]
