tests: update pytest to version 9.0.
Signed-off-by: Romain Bezut <morian@xdec.net>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,8 +73,8 @@ source = [
 	'aiostem/',
 ]
 
-[tool.pytest.ini_options]
-addopts = "--cov=aiostem"
+[tool.pytest]
+addopts = ['--cov=aiostem']
 asyncio_default_fixture_loop_scope = 'function'
 asyncio_mode = 'strict'
 log_cli = true
