tests: update dependencies to their latest versions.
I also removed py.typed from being explicitely packaged as data.
This was not needed anymore since it is now automatically added.

MyPy now also warns about returning `Any` in functions, and we had to
adjust a little bit the code to handle this new option.

Signed-off-by: Romain Bezut <morian@xdec.net>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,9 +52,6 @@ include = [
 [tool.setuptools.dynamic]
 version = {attr = 'aiostem.version.version'}
 
-[tool.setuptools.package-data]
-aiostem = ['py.typed']
-
 [tool.coverage.run]
 source = ['aiostem']
 branch = true
@@ -176,6 +173,7 @@ show_error_codes = true
 follow_imports = 'silent'
 strict_optional = true
 warn_redundant_casts = true
+warn_return_any = true
 warn_unused_ignores = true
 disallow_any_generics = true
 check_untyped_defs = true
