--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Build and publish our python packages
 on:
   push:
     tags:
-      - 'v*'
+      - "v*"
   workflow_dispatch:
 
 permissions:
@@ -21,7 +21,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v6
         with:
-          python-version: '3.10'
+          python-version: "3.10"
 
       - name: Install build dependencies
         run: make install-package
@@ -49,10 +49,10 @@ jobs:
 
     environment:
       name: pypi
-      url: 'https://pypi.org/p/aiostem'
+      url: "https://pypi.org/p/aiostem"
 
     permissions:
-      id-token: write  # For PyPI's trusted publishing.
+      id-token: write # For PyPI's trusted publishing.
 
     steps:
       - name: Download artifacts
@@ -75,8 +75,8 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: write  # IMPORTANT: mandatory for making GitHub Releases
-      id-token: write  # IMPORTANT: mandatory for sigstore
+      contents: write # IMPORTANT: mandatory for making GitHub Releases
+      id-token: write # IMPORTANT: mandatory for sigstore
 
     steps:
       - name: Download artifacts
