--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,21 +3,21 @@ name: Test
 on:
   pull_request:
     paths:
-      - '.github/workflows/tests.yml'
-      - 'tests/requirements-*.txt'
-      - 'pyproject.toml'
-      - '**.py'
+      - ".github/workflows/tests.yml"
+      - "tests/requirements-*.txt"
+      - "pyproject.toml"
+      - "**.py"
     types:
-      - 'opened'
-      - 'synchronize'
+      - "opened"
+      - "synchronize"
   push:
     branches:
-      - 'master'
+      - "master"
     paths:
-      - '.github/workflows/tests.yml'
-      - 'tests/requirements-*.txt'
-      - 'pyproject.toml'
-      - '**.py'
+      - ".github/workflows/tests.yml"
+      - "tests/requirements-*.txt"
+      - "pyproject.toml"
+      - "**.py"
   workflow_dispatch:
 
 permissions:
@@ -35,7 +35,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.10', '3.11', '3.12', '3.13', '3.14']
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
 
     steps:
       - name: Repository checkout
@@ -98,7 +98,7 @@ jobs:
       - name: Publish test results
         uses: EnricoMi/publish-unit-test-result-action@v2
         with:
-          files: 'artifacts/**/pytest.xml'
+          files: "artifacts/**/pytest.xml"
 
   mypy:
     name: Check types using MyPy
@@ -106,7 +106,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.11', '3.12', '3.13', '3.14']
+        python-version: ["3.11", "3.12", "3.13", "3.14"]
 
     steps:
       - name: Repository checkout
@@ -135,7 +135,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.12', '3.13', '3.14']
+        python-version: ["3.12", "3.13", "3.14"]
 
     steps:
       - name: Repository checkout
