--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,6 @@ stages:
   - tests
   - publish
 
-
 # Global parameters for all jobs, cache everything we install.
 variables:
   PIP_CACHE_DIR: "${CI_PROJECT_DIR}/.pip_cache"
@@ -13,7 +12,6 @@ variables:
   paths:
     - .pip_cache/
   policy: pull-push
-
 
 build-package:
   image: ${CI_REGISTRY}/dockers/ci/python-build:3.14-alpine
@@ -37,7 +35,7 @@ build-docs:
     # Ensure that sphinx has the correct identifier (see docs/conf.py).
     READTHEDOCS_GIT_IDENTIFIER: ${CI_COMMIT_REF_NAME}
     READTHEDOCS_GIT_COMMIT_HASH: ${CI_COMMIT_SHA}
-    READTHEDOCS_VERSION_TYPE: 'tag'
+    READTHEDOCS_VERSION_TYPE: "tag"
     READTHEDOCS_VERSION_NAME: ${CI_COMMIT_TAG}
   needs: []
   before_script:
@@ -92,23 +90,24 @@ typing:
 tests:
   parallel:
     matrix:
-      - PYTHON_VERSION: ['3.10', '3.11', '3.12', '3.13', '3.14']
+      - PYTHON_VERSION: ["3.10", "3.11", "3.12", "3.13", "3.14"]
   image: ${CI_REGISTRY}/dockers/ci/python-build:${PYTHON_VERSION}-alpine
   stage: tests
   needs: []
   variables:
-    AIOSTEM_HOST: 'torcontrol'
-    AIOSTEM_PASS: 'aiostem'
+    AIOSTEM_HOST: "torcontrol"
+    AIOSTEM_PASS: "aiostem"
   services:
-    - name: "${CI_REGISTRY}/${CI_PROJECT_ROOT_NAMESPACE}/docker/tor-client:0.4.8.21"
+    - name: "${CI_REGISTRY}/${CI_PROJECT_ROOT_NAMESPACE}/docker/tor-client:0.4.8.22"
       alias: torcontrol
-      command: [
-        'tor',
-        '-f',
-        '/etc/tor/torrc',
-        'HashedControlPassword',
-        '16:163184F7911BFBE760F8E71F6B13522B768BE174591BA285B3373FBC07'
-      ]
+      command:
+        [
+          "tor",
+          "-f",
+          "/etc/tor/torrc",
+          "HashedControlPassword",
+          "16:163184F7911BFBE760F8E71F6B13522B768BE174591BA285B3373FBC07",
+        ]
   cache:
     <<: *pip_cache
   before_script:
@@ -118,7 +117,7 @@ tests:
   script:
     - pytest --cov=aiostem --junit-xml=pytest.xml
     - coverage xml
-  coverage: '/TOTAL.+ ([0-9]{1,3}[.][0-9]{2}%)/'
+  coverage: "/TOTAL.+ ([0-9]{1,3}[.][0-9]{2}%)/"
   artifacts:
     reports:
       coverage_report:
