--- a/tests/compose.yml
+++ b/tests/compose.yml
@@ -1,15 +1,16 @@
 ---
 services:
   tor-client:
-    image: "docker.io/morian42/tor-client:0.4.8.21"
+    image: "docker.io/morian42/tor-client:0.4.8.22"
     ports:
       - "9050:9050"
       - "9051:9051"
-    command: [
-      'tor',
-      '-f',
-      '/etc/tor/torrc',
-      'HashedControlPassword',
-      '16:163184F7911BFBE760F8E71F6B13522B768BE174591BA285B3373FBC07'
-    ]
+    command:
+      [
+        "tor",
+        "-f",
+        "/etc/tor/torrc",
+        "HashedControlPassword",
+        "16:163184F7911BFBE760F8E71F6B13522B768BE174591BA285B3373FBC07",
+      ]
     restart: unless-stopped
